<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">


    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30dp"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_45dp"
        android:layout_marginRight="@dimen/_45dp"/>

    <EditText
        android:id="@+id/et_SignUp_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_45dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/name"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/et_SignUp_Email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/et_SignUp_Hp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/Hp"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/et_SignUp_Password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/et_SignUp_ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/Confirmpassword"
        android:textSize="@dimen/_18sp" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/bg"
        android:text="@string/SignUp"
        android:textColor="@color/white" />

</LinearLayout>