<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map_driver"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/c_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:src="@drawable/pin" />

                <TextView
                    android:id="@+id/tv_home_awal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:lines="2"
                    android:text="@string/from"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/tv_home_tujuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:lines="2"
                    android:text="@string/maukemana"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_home"
        android:layout_above="@id/home_btn_home_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:src="@drawable/wallet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/price"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_home_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/number" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/clock"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/nama_driver"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_home_name_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_3mnt"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/home_btn_home_"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="home"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</RelativeLayout>